syntax = "proto3";

option go_package = "./p2p";

package p2p;

service P2P {
    rpc SendHello(HelloMessage) returns (HelloMessage) {}
    rpc GetPeers(PeersRequest) returns (PeersResponse) {}
    rpc GetObject(ObjectId) returns (Object) {}
    rpc IHaveObject(ObjectId) returns (Empty) {}
}

message HelloMessage {
    string status = 1;
    string version = 2;
    string agent = 3;
    uint32 port = 4;
}

message PeersResponse {
    repeated string peers = 1;
    string status = 2;
}

message PeersRequest {
}

message ObjectId {
    bytes objectId = 1;
    string type = 2;
}

message Object {
    bytes object = 1;
    string type = 2;
    string status = 3;
}

message Empty {
}

message Block {
    repeated bytes txIds = 1;
    bytes nonce = 2;
    bytes prevId = 3;
    uint64 created = 4;
    bytes t = 5;
    string miner = 6;
    string note = 7;    
}

message Tx {
    repeated Input inputs = 1;
    repeated Output outputs = 2;
    int64 height = 3;    
}

message OutPoint{
    bytes txId = 1;
    int64 index = 2;
}

message Input {
    OutPoint outpoint = 1;
    bytes sig = 2;
}

message Output {
    bytes pubkey = 1;
    int64 value = 2;
}